    fail, use the UBIQUITY_NO_TESTS environment variable.
  * Divert initctl around apt-clone to prevent packages with Upstart
    jobs from failing to be reinstalled.
  * Ensure that the partition description labels all wrap at the same
    point (LP: #741664).
  * Move test dependencies into build-depends.  Thanks Colin Watson!

  [ Colin Watson ]
  * Start debconf in ubiquity.i18n.reset_locale if it isn't already running
    (LP: #649895).
  * Remove grub_device_label from string_extended, now that the boot loader
    question is only asked from the partitioning page rather than a separate
    dialog (LP: #726740).

 -- Evan Dandrea <ev@ubuntu.com>  Thu, 24 Mar 2011 13:27:38 +0000

ubiquity (2.5.29) natty; urgency=low

  * Remove cy from LINGUAS. Fixes build failure.

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 23 Mar 2011 21:16:17 +0000

ubiquity (2.5.28) natty; urgency=low

  [ Evan Dandrea ]
  * Update the descriptions for the automatic partitioning options to match
    changes to the specification (LP: #736959).
  * Mount /proc and friends for apt-clone.
  * Use the noninteractive debconf frontend when calling apt-clone.
  * apt-clone is now a separate package.
  * Add a partitioning heading to help clarify what operating systems
    may be acted upon by the installer.
  * Remove ' (loader)' from the os-prober operating system descriptions on
    the initial partitioning page.
  * Properly substitute in the non-Ubuntu system when generating descriptions
    for dual boot partitioning.
  * Remove alpha warning for reuse option in preparation for the 11.04 Beta.
  * Update translations from Launchpad.
  * Automatic update of included source packages: console-setup
    1.57ubuntu17, grub-installer 1.60ubuntu2, localechooser 2.34ubuntu3,
    partman-auto 93ubuntu13, partman-auto-loop 0ubuntu19.

  [ Colin Watson ]
  * Preprocess our variant of keyboard-configuration.postinst, so that it
    includes the keyboard_present function.